default.css
:root {
  --text-1: 0.5rem;
  --text-2: 1rem;
  --text-3: 1.5rem;
  --text-4: 2rem;
  --text-5: 2.5rem;
  --text-6: 3rem;
  --main: #3c4d5f;
  --main-comp-1: #e6efef;
  --main-comp-2: #cddfdf;
  --main-comp-3: #a8c7c7;
  --main-comp-4: #406464;
  --main-comp-5: #304b4b;
  --gs-1: #ffffff;
  --gs-2: #f5f5f5;
  --gs-3: #e0e0e0;
  --gs-4: #c2c2c2;
  --gs-5: #858585;
  --gs-6: #5c5c5c;
  --gs-7: #474747;
  --gs-8: #292929;
  --gs-9: #1f1f1f;
  --main-acc-1: #fdc872;
  --main-acc-2: #fcb84a;
  --main-acc-3: #fca822;
  --main-acc-4: #f19604;
  --comp-acc-1: #ba3b46;
  --comp-acc-2: #8c2c34;
  --comp-acc-3: #6d2228;
  --comp-acc-4: #4e181d;
  --button: #deb72b;
  --button-text: #ffffff;
  --button-hover: #ffd700;
  --button-hover-text: #292929;
  --glass: 29, 29, 32;
  --text: #292929;
  --header-font: "Raleway", sans-serif;
}

* {
  margin: 0 0;
}

html {
  font-size: 18px;
  margin: 0 0;
  width: 100%;
  background: var(--main-comp-1);
  color: var(--gs-8);
  font-family: "Raleway", sans-serif;
  scroll-behavior: smooth;
}

@media only screen and (max-width: 38rem) {
  html {
    font-size: 14px;
  }
}

::selection {
  background: var(--main);
  color: var(--gs-1);
}

body {
  overflow-x: hidden;
}

section {
  max-width: 700px;
  margin: 1rem auto 0 auto;
  padding: 0 1rem;
}

p {
  margin: 1rem 0;
  font-size: var(--text-2);
}

a {
  color: var(--text);
}

a:hover {
  font-style: italic;
  font-weight: 800;
  color: var(--button);
}

.center {
  display: flex;
  justify-content: center;
  align-self: flex-start;
  align-items: center;
}

/************ MOBILE ****************/

.mobile-container {
  max-width: 480px;
  margin: auto;
  background-color: #555;
  height: 500px;
  color: white;
  border-radius: 10px;
}

.topnav {
  overflow: hidden;
  background-color: #333;
  position: relative;
}

.topnav #myLinks {
  display: none;
}

.topnav a {
  color: white;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  display: block;
  text-align: center;
}

.topnav a.icon {
  background: black;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/************** HEADER *************/
header {
  max-width: 60rem;
  margin: 0 auto;
}

.topheader {
  display: flex;
  justify-content: space-between;
  flex-flow: row nowrap;
}

.menu-ul > ul li {
  display: inline-block;
}

#home {
  display: flex;
  justify-content: center;
  margin: 1rem 0;
}

#logo {
  max-width: 4rem;
  align-self: flex-start;
  height: auto;
}

#burger {
  display: none;
  cursor: pointer;
  align-self: center;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width: 38rem) {
  #home {
    margin: 0 0;
    justify-content: space-between;
  }

  #logo {
    max-width: 2rem;
    margin: 0.5rem 0.5rem;
  }

  #burger {
    display: block;
    font-size: var(--text-3);
    margin-right: 1rem;
  }
}

.menu {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-bottom: 0rem;
}

.menu:before {
  content: "";
  background: hsla(0, 0%, 39%, 1);
  padding: 0.5px;
  flex: 100%;
}

.menu:after {
  content: "";
  background: hsla(0, 0%, 39%, 1);
  padding: 0.5px;
  flex: 100%;
}

@media only screen and (max-width: 38rem) {
  .menu-ul {
    display: none;
  }
}

.menu-ul > li {
  display: inline-block;
  margin: 1.25rem 1rem;
  text-align: center;
}

.mobile {
  display: none;
}

@media only screen and (max-width: 38rem) {
  .mobile {
    display: inline-block;
  }

  ul {
    width: 100%;
  }

  li,
  .mobile {
    display: block;
    margin: 0;
    text-align: center;
  }
}

a menu-ul {
  display: block;
  padding: 0.5rem;
  font-size: 1rem;
}

.ink-people {
  font-size: 0.65rem;
  margin: 0 auto;
}

button {
  background-color: var(--button);
  color: var(--button-text);
  width: 8rem;
  height: 3rem;
  font-weight: heavy;
  border-radius: 5px;
  font-size: var(--text-3);
  border: none;
}

button:hover {
  color: var(--button-hover-text);
  background-color: var(--button-hover);
}

h2 {
  text-align: center;
}

.menu-mobile {
  display: none;
}

@media only screen and (max-width: 38rem) {
  .menu-mobile.appear {
    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0 0;
  }

  .menu-ul-mobile.appear li {
    width: 100%;
    text-align: center;
    border-top: solid 2px var(--text);
  }
}

.name-banner {
  text-align: center;
  font-size: var(--text-4);
  margin: 0.75rem 0;
  font-weight: 800;
}

/************** MISCONCEPTION SECTION *************/

.misconception-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 700px;
  margin: 2rem auto;
}

.misconception-text h1 {
  margin: 1rem 1rem;
  margin: 2rem auto;
  text-align: left;
  font-size: var(--text-3);
}

.misconception-img {
  display: flex;
  align-self: flex-start;
  justify-content: center;
}

.misconception-img img {
  width: 90%;
  max-width: 700px;
  height: auto;
  margin: 2rem auto;
}

/************** AUTHOR IMAGES *************/

.author-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: row;
  flex-shrink: 2;
  object-fit: fill;
  margin: 0 auto;
}
.author-img {
  width: 120px;
  height: 185px;
}

.author-pair {
  display: flex;
  justify-content: center;
}

.vonnegut-img {
  background: url("assets/vonnegut.jpg") no-repeat;
  background-size: contain;
  margin: 0.5rem 0.5rem;
}

.vonnegut-img:hover {
  background: url("assets/vonnegut-cover.jpg") no-repeat;
  background-size: contain;
}

.cummings-img {
  background: url("assets/cummings.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.cummings-img:hover {
  background: url("assets/cummings-cover.jpg") no-repeat;
  background-size: contain;
}

.heller-img {
  background: url("assets/heller.jpg") no-repeat;
  background-size: contain;
  margin: 0.5rem 0.5rem;
}

.heller-img:hover {
  background: url("assets/heller-cover.jpg") no-repeat;
  background-size: contain;
}

.asimov-img {
  background: url("assets/asimov.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.asimov-img:hover {
  background: url("assets/asimov-cover.jpg") no-repeat;
  background-size: contain;
}

.stone-img {
  background: url("assets/stone.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.stone-img:hover {
  background: url("assets/stone-cover.jpg") no-repeat;
  background-size: contain;
}

.mailer-img {
  background: url("assets/mailer.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.mailer-img:hover {
  background: url("assets/mailer-cover.jpg") no-repeat;
  background-size: contain;
}

.bierce-img {
  background: url("assets/bierce.gif") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.bierce-img:hover {
  background: url("assets/bierce-cover.jpg") no-repeat;
  background-size: contain;
}

.obrien-img {
  background: url("assets/obrien.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.obrien-img:hover {
  background: url("assets/obrien-cover.jpg") no-repeat;
  background-size: contain;
}

.salinger-img {
  background: url("assets/salinger.jpg") no-repeat;
  background-size: contain;
  display: inline-block;
  margin: 0.5rem 0.5rem;
}

.salinger-img:hover {
  background: url("assets/salinger-cover.jpg") no-repeat;
  background-size: contain;
}

/************** Art List *************/

.art-list {
  margin-left: 5%;
}

@media only screen and (max-width: 38rem) {
  .art-list {
    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0 0;
  }

  .art-list li {
    width: 100%;
    text-align: left;
  }
}

/************** The MISSION *************/

.the-mission {
  width: 100%;
  border-top: var(--text) 2px solid;
  border-bottom: var(--text) 4px solid;
  padding: 1rem 0;
}

/************** DONATE NOW *************/

.donate-now {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: var(--main);
  color: var(--gs-2);
  width: 60%;
  padding: 1rem 1rem;
  margin: 0 auto;
  border-bottom: var(--comp-acc-1) 6px solid;
}

@media only screen and (max-width: 38rem) {
  .donate-now {
    width: 90%;
  }
}

.donate-now button {
  margin-top: 1rem;
  margin-left: auto;
  margin-right: auto;
}

progress {
  width: 90%;
  height: var(--text-3);
  margin-top: 1rem;
  -webkit-appearance: none;
}

/***************** SLIDER ANIMATIONS *****************/

.from-left {
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.from-right {
  -webkit-transform: translateX(50%);
  transform: translateX(50%);
}

.from-left,
.from-right {
  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
  transition: opacity 250ms ease-in, transform 400ms ease-in;
  transition: opacity 250ms ease-in, transform 400ms ease-in,
    -webkit-transform 400ms ease-in;
  opacity: 0;
}

.from-left.appear,
.from-right.appear {
  -webkit-transform: translateX(0);
  transform: translateX(0);
  opacity: 1;
}

/************** FORM ****************/

#mc_embed_signup form {
  width: 60%;
  margin: 1rem auto;
  background: var(--main);
  color: var(--gs-2);
  border-bottom: var(--comp-acc-1) 6px solid;
}

@media only screen and (max-width: 38rem) {
  #mc_embed_signup form {
    width: 90%;
  }
}

#mc_embed_signup_scroll {
  display: flex;
  justify-items: center;
  flex-direction: column;
  padding: 0 1rem;
}

#mce-error-response {
  color: var(--gs-2);
}

#mce-success-response {
  color: var(--gs-2);
}

#mc_embed_signup_scroll .button-custom {
  background-color: var(--button);
  color: var(--button-text);
  width: 8rem;
  height: 3rem;
  font-weight: heavy;
  border-radius: 5px;
  font-size: var(--text-3);
  border: 0;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1rem;
}

#mc_embed_signup_scroll .button-custom:hover {
  color: var(--button-hover-text);
  background-color: var(--button-hover);
}

/***************** FOOTER *****************/

footer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  color: var(--text);
  align-items: center;
  border-top: black 2px solid;
  padding: 0.5rem 0.5rem;
  height: var(--text-6);
  margin-bottom: 2rem;
}

footer-p {
  width: 100%;
}

